--- a/test/index.html
+++ b/test/index.html
@@ -11,12 +11,26 @@
 
 </head>
 
+<style>
+    input{
+        position: absolute;
+        width: 30px;
+        height: 30px;
+        left: 9px;
+        z-index: 1;
+        opacity: 0;
+    }
+</style>
+
 <body>
 
-    <div id="catalog" style="background-color: rgb(222, 232, 233);"></div>
+    <img id = 'heart' src="../test/icons8-сердце-32.png" alt="">
+
+    <input id = 'check' type="checkbox" checked onchange="fun1()">
+
 
     <script src="script.js"></script>
-
+    
 
 
 </body>
