--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>
-        window.location.href = 'start_page/start_page.html'
+        window.location.href = 'start_page/start_page.html'd
     </script>
     <title>Document</title>
 </head>
