--- a/start_page/start_page.html
+++ b/start_page/start_page.html
@@ -40,7 +40,7 @@
         <div class="function">
 
             <div id="login" onclick="registrationOpen()"> 
-                <button class="function_buttom">
+                <button id="1" class="function_buttom">
 
                 <svg 
                     xmlns="http://www.w3.org/2000/svg" 
@@ -61,7 +61,7 @@
 
             <div id="search" onclick="openSearchSP()">
                 
-                <button class="function_buttom">
+                <button id="2" class="function_buttom">
 
                 <svg 
 
@@ -82,7 +82,7 @@
 
             <div id="wish_list">
 
-                <button class="function_buttom">
+                <button id="3" class="function_buttom">
 
                 <svg 
                     xmlns="http://www.w3.org/2000/svg" 
@@ -102,7 +102,7 @@
 
             <div id="catalog"> 
 
-                <button class="function_buttom" onclick="openCategoriesSP()">
+                <button id="4" class="function_buttom" onclick="openCategoriesSP()">
 
                 <svg
 
